--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,9 +5,7 @@ on:
     tags:
       - "v*"
 
-permissions:
-  id-token: write # Required for OIDC
-  contents: read
+permissions: {}
 
 concurrency:
   group: publish-${{ github.ref }}
@@ -19,6 +17,9 @@ env:
 jobs:
   prepare:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read # To clone the repository
+      actions: write # To upload the package tarball to the artifacts
     outputs:
       packageName: ${{ steps.packageName.outputs.packageName }}
       filename: ${{ steps.pack.outputs.filename }}
@@ -66,6 +67,8 @@ jobs:
   review:
     needs: prepare
     runs-on: ubuntu-latest
+    permissions:
+      actions: read # To download the tarball to review
     steps:
       - name: Download packed tarball
         uses: actions/download-artifact@v4
@@ -95,6 +98,9 @@ jobs:
     needs: [prepare, review]
     runs-on: ubuntu-latest
     environment: npm-publish
+    permissions:
+      actions: read # To download the tarball to publish
+      id-token: write ## Needed for npm Trusted Publishing (OIDC)
     steps:
       - name: Download packed tarball
         uses: actions/download-artifact@v4
