Set up monorepo

--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "antico-trusted-publishing-example",
-  "version": "1.0.1",
-  "description": "An example package published using Github as a trusted publisher",
-  "repository": {
-    "url": "https://github.com/antico5/trusted-publishing-example"
-  },
-  "main": "index.js",
-  "license": "MIT",
-  "files": [
-    "./*.js"
-  ],
+  "name": "root",
+  "version": "0.0.0",
+  "private": true,
   "packageManager": "pnpm@10.17.1",
   "devDependencies": {
-    "chalk": "^5.0.0"
+    "@changesets/cli": "^2.16.0",
+    "typescript": "~5.8.0"
+  },
+  "scripts": {
+    "build": "pnpm run --recursive --if-present build",
+    "clean": "pnpm run --recursive --if-present clean",
+    "test": "pnpm run --recursive --if-present test",
+    "prelint": "pnpm build",
+    "lint": "pnpm run --recursive --if-present lint",
+    "prelint:fix": "pnpm build",
+    "lint:fix": "pnpm run --recursive --if-present lint:fix",
+    "version-for-release": "pnpm changeset version && pnpm -w install --lockfile-only"
   }
 }
