--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,9 @@ jobs:
           # NOTE: If we use default GITHUB_TOKEN to create the release PR, the checks on the release PR will not be triggered automatically
           token: ${{ secrets.RELEASE_GITHUB_TOKEN || github.token }}
 
+      - name: Set up the environment
+        uses: ./.github/actions/setup-env
+
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile --prefer-offline
 
