--- a/packages/antico-trusted-publishing-example-sub-1/package.json
+++ b/packages/antico-trusted-publishing-example-sub-1/package.json
@@ -15,5 +15,8 @@
   "packageManager": "pnpm@10.17.1",
   "devDependencies": {
     "chalk": "^5.0.0"
+  },
+  "dependencies": {
+    "antico-trusted-publishing-example-sub-2": "workspace:^1.0.1"
   }
 }
