--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -99,3 +99,40 @@ jobs:
       # - name: Push Git tags
       #   if: steps.pr.outputs.hasChangesets == 'false'
       #   run: git push --follow-tags
+
+      
+  review:
+    needs: prepare
+    if: ${{ needs.prepare.steps.pr.outputs.hasChangesets == 'false' }}
+
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read # To download the tarball to review
+    steps:
+      - name: test
+        id: test
+        run: echo test
+
+      # - name: Download packed tarball
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: ${{ needs.prepare.outputs.filename }}
+      #     path: .
+      # - name: Download previous "@${{ env.NPM_TAG }}" version tarball
+      #   run: |
+      #     TARBALL_URL=$(npm view "${{ needs.prepare.outputs.packageName }}@${{ env.NPM_TAG }}" dist.tarball)
+      #     curl -L "$TARBALL_URL" -o ${{ env.NPM_TAG }}.tgz
+      #     TARBALL_NAME=$(basename "$TARBALL_URL")
+      #     echo "Downloaded $TARBALL_NAME as ${{ env.NPM_TAG }}.tgz"
+      # - name: Prepare tarballs for comparisons
+      #   run: |
+      #     mkdir ${{ env.NPM_TAG }}
+      #     tar -xzf ${{ env.NPM_TAG }}.tgz -C ${{ env.NPM_TAG }}
+      #     mkdir proposed-version
+      #     tar -xzf ${{ needs.prepare.outputs.filename }} -C proposed-version
+      # - name: List new, changed and deleted files
+      #   run: |
+      #     git diff --color=always --no-index --name-status ${{ env.NPM_TAG }} proposed-version || true
+      # - name: Compare package.json files
+      #   run: |
+      #     git diff --color=always --no-index ${{ env.NPM_TAG }}/package/package.json proposed-version/package/package.json  || true
