--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -109,7 +109,7 @@ jobs:
       
   review:
     needs: prepare
-    if: needs.prepare.outputs.hasChangesets == 'false'
+    # if: needs.prepare.outputs.hasChangesets == 'false'
 
     runs-on: ubuntu-latest
     permissions:
@@ -117,7 +117,7 @@ jobs:
     steps:
       - name: test
         id: test
-        run: echo test
+        run: echo ${{needs.prepare.output}}
 
       # - name: Download packed tarball
       #   uses: actions/download-artifact@v4
