--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -129,32 +129,32 @@ jobs:
           name: tarballs
           path: tarballs
 
-      - run: ls -la
-      - run: ls -la tarballs
+      - run: ls -lar
 
       - name: Download previous "latest" version tarballs
         run: |
           jq -r '.publishedPackages[] | "\(.name)|\(.version)"' pnpm-publish-summary.json |
           while IFS='|' read -r name version; do
+            # download latest
             TARBALL_URL=$(npm view "$name@latest" dist.tarball)
             curl -L "$TARBALL_URL" -o "tarballs/$name-latest.tgz"
+
+            # unpack both latest and proposed version
+            mkdir -p tarballs/$name/proposed
+            mkdir -p tarballs/$name/latest
+            tar -xzf tarballs/$name-latest.tgz -C tarballs/$name/latest
+            tar -xzf tarballs/$name-$version.tgz -C tarballs/$name/proposed
           done
 
-      - run: ls -la
-      - run: ls -la tarballs
+      - run: ls -lar
 
-      # - name: Download previous "@${{ env.NPM_TAG }}" version tarball
-      #   run: |
-      #     TARBALL_URL=$(npm view "${{ needs.prepare.outputs.packageName }}@${{ env.NPM_TAG }}" dist.tarball)
-      #     curl -L "$TARBALL_URL" -o ${{ env.NPM_TAG }}.tgz
-      #     TARBALL_NAME=$(basename "$TARBALL_URL")
-      #     echo "Downloaded $TARBALL_NAME as ${{ env.NPM_TAG }}.tgz"
       # - name: Prepare tarballs for comparisons
       #   run: |
       #     mkdir ${{ env.NPM_TAG }}
       #     tar -xzf ${{ env.NPM_TAG }}.tgz -C ${{ env.NPM_TAG }}
       #     mkdir proposed-version
       #     tar -xzf ${{ needs.prepare.outputs.filename }} -C proposed-version
+
       # - name: List new, changed and deleted files
       #   run: |
       #     git diff --color=always --no-index --name-status ${{ env.NPM_TAG }} proposed-version || true
