--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -137,7 +137,7 @@ jobs:
           while IFS='|' read -r name version; do
             # download latest
             TARBALL_URL=$(npm view "$name@latest" dist.tarball)
-            curl -L "$TARBALL_URL" -o "tarballs/$name-latest.tgz"
+            curl -s -L "$TARBALL_URL" -o "tarballs/$name-latest.tgz"
 
             # unpack both latest and proposed version
             mkdir -p tarballs/$name/proposed
@@ -146,9 +146,9 @@ jobs:
             tar -xzf tarballs/$name-$version.tgz -C tarballs/$name/proposed
 
             # show diffs for review
-            echo "Showing files diff for $name"
+            echo "\033[33m Showing files diff for $name \033[0m"
             git diff --color=always --no-index --name-status tarballs/$name/latest tarballs/$name/proposed || true
-            echo "Showing package.json diff for $name"
+            echo "\033[33m Showing package.json diff for $name \033[0m"
             git diff --color=always --no-index tarballs/$name/latest/package/package.json tarballs/$name/proposed/package/package.json || true
           done
 
