--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -169,9 +169,8 @@ jobs:
         run: npm install -g npm@latest
       - name: Publish
         run: |
-          for filename in tarballs/*.tgz; do
+          cd tarballs
+          for filename in *.tgz; do
             echo "Publishing $filename"
             npm publish $filename --tag latest
           done
-          echo "Publishing ${{ needs.prepare.outputs.filename }}"
-          npm publish "${{ needs.prepare.outputs.filename }}" --tag ${{ env.NPM_TAG }}
