--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,15 @@ jobs:
           title: Version Packages (v3)
           version: pnpm version-for-release
 
+      - name: Cancel this workflow run
+        if: steps.pr.outputs.hasChangesets == 'false'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { owner, repo } = context.repo;
+            const run_id = context.runId;
+            await github.rest.actions.cancelWorkflowRun({ owner, repo, run_id });
+
       - name: Store hasChangesets for other jobs
         id: store-has-changesets
         run: |
@@ -127,7 +136,7 @@ jobs:
           name: tarballs
           path: tarballs
 
-      - name: Download previous "latest" version tarballs
+      - name: Show diff between published and proposed packages
         run: |
           jq -r '.publishedPackages[] | "\(.name)|\(.version)"' pnpm-publish-summary.json |
           while IFS='|' read -r name version; do
