--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
       hasChangesets: ${{ steps.store-has-changesets.outputs.hasChangesets }}
     permissions:
       pull-requests: write # This allows us to create pull requests
+      contents: write
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v5
