--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -173,6 +173,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.RELEASE_GITHUB_TOKEN || github.token }}
 
       - name: Set up the environment
         uses: ./.github/actions/setup-env
