--- a/packages/antico-trusted-publishing-example/package.json
+++ b/packages/antico-trusted-publishing-example/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "antico-trusted-publishing-example-sub-1": "workspace:^1.0.15",
-    "antico-trusted-publishing-example-sub-2": "workspace:^1.1.11"
+    "antico-trusted-publishing-example-sub-2": "workspace:^1.1.11",
+    "picocolors": "^1.1.1"
   }
 }
