--- a/packages/antico-trusted-publishing-example-sub-2/package.json
+++ b/packages/antico-trusted-publishing-example-sub-2/package.json
@@ -18,5 +18,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
+    "antico-trusted-publishing-example": "workspace:^1.0.0"
   }
 }
