--- a/.github/workflows/ensure-peer-deps-review.yml
+++ b/.github/workflows/ensure-peer-deps-review.yml
@@ -5,7 +5,7 @@ name: Check peer dependency versions have been reviewed
 
 on:
   merge_group:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - synchronize
