--- a/packages/antico-trusted-publishing-example-sub-1/package.json
+++ b/packages/antico-trusted-publishing-example-sub-1/package.json
@@ -16,9 +16,7 @@
   "devDependencies": {
     "chalk": "^5.0.0"
   },
-  "dependencies": {
-    "antico-trusted-publishing-example-sub-2": "workspace:^1.2.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "antico-trusted-publishing-example": "workspace:^1.0.16"
   }
