--- a/packages/antico-trusted-publishing-example-sub-2/package.json
+++ b/packages/antico-trusted-publishing-example-sub-2/package.json
@@ -17,7 +17,8 @@
     "chalk": "^5.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "antico-trusted-publishing-example-sub-1": "workspace:^1.2.0"
   },
   "peerDependencies": {
     "antico-trusted-publishing-example": "workspace:^1.0.16"
