--- a/packages/antico-trusted-publishing-example-sub-1/package.json
+++ b/packages/antico-trusted-publishing-example-sub-1/package.json
@@ -16,8 +16,5 @@
   "devDependencies": {
     "chalk": "^5.0.0"
   },
-  "dependencies": {},
-  "peerDependencies": {
-    "antico-trusted-publishing-example": "workspace:^1.0.16"
-  }
+  "dependencies": {}
 }
