--- a/.github/workflows/ensure-peer-deps-review.yml
+++ b/.github/workflows/ensure-peer-deps-review.yml
@@ -15,9 +15,18 @@ on:
       - edited
       - unlocked
       - ready_for_review
+  pull_request_target:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - labeled
+      - unlabeled
+      - edited
+      - unlocked
+      - ready_for_review
   push:
     branches:
-      - main
       - changeset-release/main
 
 jobs:
