--- a/.github/workflows/ensure-peer-deps-review.yml
+++ b/.github/workflows/ensure-peer-deps-review.yml
@@ -5,29 +5,34 @@ name: Check peer dependency versions have been reviewed
 
 on:
   merge_group:
-  pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - labeled
-      - unlabeled
-      - edited
-      - unlocked
-      - ready_for_review
-  pull_request_target:
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - labeled
-      - unlabeled
-      - edited
-      - unlocked
-      - ready_for_review
-  push:
-    branches:
-      - changeset-release/main
+    types: [checks_requested]
+  # pull_request:
+  #   types:
+  #     - opened
+  #     - synchronize
+  #     - reopened
+  #     - labeled
+  #     - unlabeled
+  #     - edited
+  #     - unlocked
+  #     - ready_for_review
+  # pull_request_target:
+  #   types:
+  #     - opened
+  #     - synchronize
+  #     - reopened
+  #     - labeled
+  #     - unlabeled
+  #     - edited
+  #     - unlocked
+  #     - ready_for_review
+  # push:
+  #   branches:
+  #     - changeset-release/main
+  create:
+  repository_dispatch:
+  check_run:
+  check_suite:
 
 jobs:
   check-label:
