--- a/.github/workflows/ensure-peer-deps-review.yml
+++ b/.github/workflows/ensure-peer-deps-review.yml
@@ -6,29 +6,29 @@ name: Check peer dependency versions have been reviewed
 on:
   merge_group:
     types: [checks_requested]
-  # pull_request:
-  #   types:
-  #     - opened
-  #     - synchronize
-  #     - reopened
-  #     - labeled
-  #     - unlabeled
-  #     - edited
-  #     - unlocked
-  #     - ready_for_review
-  # pull_request_target:
-  #   types:
-  #     - opened
-  #     - synchronize
-  #     - reopened
-  #     - labeled
-  #     - unlabeled
-  #     - edited
-  #     - unlocked
-  #     - ready_for_review
-  # push:
-  #   branches:
-  #     - changeset-release/main
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - labeled
+      - unlabeled
+      - edited
+      - unlocked
+      - ready_for_review
+  pull_request_target:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - labeled
+      - unlabeled
+      - edited
+      - unlocked
+      - ready_for_review
+  push:
+    branches:
+      - changeset-release/main
   create:
   repository_dispatch:
   check_run:
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Check for the label presence
-        if: github.event_name == 'pull_request'
+        # if: github.event_name == 'pull_request'
         env:
           GITHUB_EVENT_PULL_REQUEST_LABELS: ${{ toJson(github.event.pull_request.labels) }}
         run: node scripts/validate-peer-dependencies-reviewed-label.mjs
