--- a/.github/workflows/ensure-peer-deps-review.yml
+++ b/.github/workflows/ensure-peer-deps-review.yml
@@ -10,6 +10,7 @@ on:
       - labeled
       - unlabeled
       - edited
+      - ready_for_review
   # pull_request_target:
   #   types:
   #     - opened
