--- a/.github/workflows/ensure-peer-deps-review.yml
+++ b/.github/workflows/ensure-peer-deps-review.yml
@@ -11,30 +11,10 @@ on:
       - unlabeled
       - edited
       - ready_for_review
-  # pull_request_target:
-  #   types:
-  #     - opened
-  #     - synchronize
-  #     - reopened
-  #     - labeled
-  #     - unlabeled
-  #     - edited
-  #     - unlocked
-  #     - ready_for_review
-  # push:
-  #   branches:
-  #     - changeset-release/main
-  # create:
-  # repository_dispatch:
-  # check_run:
-  # check_suite:
-  # workflow_run:
-  #   workflows: ["Create release PR / Publish packages"]   # name of the workflow that opens/updates the PR
-  #   types: [completed]
 
 jobs:
   check-label:
-    # if: github.head_ref == 'changeset-release/main'
+    if: github.head_ref == 'changeset-release/main'
     name: Check peer dependency versions have been reviewed
     runs-on: ubuntu-latest
     steps:
@@ -42,7 +22,6 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Check for the label presence
-        # if: github.event_name == 'pull_request'
         env:
           GITHUB_EVENT_PULL_REQUEST_LABELS: ${{ toJson(github.event.pull_request.labels) }}
         run: node scripts/validate-peer-dependencies-reviewed-label.mjs
